--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "illuminate/database": "4.1 - 6.*"
+        "illuminate/database": "^6"
     },
     "suggest": {
         "jenssegers/mongodb": "Use QueryBuilderParser with MongoDB"
